fix alignment between pegasus and dashboard

--- a/pegasus/sites.v3/code.org/public/css/page.css
+++ b/pegasus/sites.v3/code.org/public/css/page.css
@@ -42,3 +42,36 @@
 }
 
 /* End of custom styling for included user_stats. */
+
+
+.tallheading h3 {
+  margin: 10px 10px 5px 10px;
+  color: #5b6770;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: left;
+  font-size: 24px;
+  font-family: "Gotham 5r", sans-serif;
+}
+
+.wideheading h3 {
+  margin: 10px 10px 5px 10px;
+  color: #5b6770;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: left;
+  font-size: 22px;
+  font-family: "Gotham 5r", sans-serif;
+}
+
+.smallwidetext {
+  font-size: 13px;
+  line-height: 17px;
+  padding-right: 10px;
+  margin-left: 10px;
+  font-family: "Gotham 4r", sans-serif;
+  font-weight:normal;
+  color: #5b6770;
+}
